# todoart

./: .gitignore  AGENTS.md  README.md  devenv.nix
.github/workflows/: android-release.yml
api/: AGENTS.md  package.nix  pyproject.toml
api/api/tests/: test_settings.py
api/app/: __main__.py  crud.py  db.py  main.py  models.py  release_crud.py  settings.py
api/app/crud/: releases.py  todos.py
api/app/routes/: base.py  releases.py  todos.py
api/tests/: conftest.py  test_cli.py  test_main.py
app/: AGENTS.md  pubspec.yaml
app/android/: gradlew  settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/artfil/app/: MainActivity.kt
app/lib/: api_config.dart  app_release.dart  app_release_repository.dart  app_update_controller.dart  app_update_exception.dart  http_app_release_repository.dart  http_todo_repository.dart  main.dart  todo_item.dart  todo_repository.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/test/: widget_test.dart
docs/: AGENT_WORKFLOW.md  NIXOS_DEPLOYMENT.md
nix/: todoart-api-module.nix
